--- a/web bien/ropa y accesorios.css
+++ b/web bien/ropa y accesorios.css
@@ -15,9 +15,10 @@ p{
 }
 #idioma{
   width: 15%;
-  height: 100px;
-  margin: 0 0 0 85%;
-  z-index: 10;
+  height: 10px;
+  margin: 5% 0 0 85%;
+
+
 }
 #menu{
    display: none;
@@ -25,10 +26,10 @@ p{
 .ca{
   width: 50%;
   height: 40px;
-  float: left;
+  display: inline;
   text-align: center;
-  padding-top: 60px;
-  font-size: 1.3em;
+
+  font-size: 1.4em;
 }
 #text1{
 
@@ -54,14 +55,14 @@ p{
   margin: 0 40% 0 40%;
   text-align: center;
   padding: 30px 0 0 0;
-  font-size: 1.5em;
+  font-size: 1.6em;
 }
 #textos{
   width: 100%;
   height: 240px;
   position: absolute;
   margin-top: 20%;
-  font
+
 }
 #texto1{
   background-color: rgba(255, 255, 255, 0.76);
@@ -70,7 +71,7 @@ p{
   text-align: center;
   padding: 30px 0 0 0;
   margin: 10px 35% 0 35%;
-  font-size: 1.6em;
+  font-size: 2em;
 }
 #fondo{
   width: 100%;
@@ -89,16 +90,16 @@ p{
   margin: 0 10% 0 10%;
   position: relative;
   z-index: 15;
-
+  font-size: 1.3em;
 }
 .secc{
-   width:15%;
-   height: 30px;
-   float: left;
-  text-align: left;
-  margin-top: 100px;
-  margin-left: 8%;
-  font-size: 1.3em;
+  width:15%;
+  height: 30px;
+  float: left;
+ text-align: left;
+ margin-top: 100px;
+ margin-left: 8%;
+ font-size: 1.3em;
 
 }
 #nosotros{
@@ -106,6 +107,12 @@ p{
   height: 5190px;
 
   margin: 10% 20% 0 20%;
+}
+#nosotros h2{
+  font-size: 1.6em;
+}
+#nosotros p{
+  font-size: 1.3em;
 }
 h1{
   text-align: center;
@@ -177,26 +184,30 @@ margin-top: 8650px;
   border-radius: 50px;
   text-align: center;
   padding-top: 5px;
-  margin: -1% 48% 0 48%;
+  margin: -1% 0 0 47%;
   style-type: none;
   text-align: center;
 }
 #flecha p{
-  margin-left: 40%;
+  margin-top: -1px;
+  margin-left: 12px;
+  font-size: 2em;
+  position: absolute;
 }
 #redes{
-  width: 20%;
-  margin: 2% 40% 0 40%;
+  width: 40%;
+  margin: 2% 30% 0 30%;
 }
 .img{
   width: 23%;
 }
 .tiendas{
-width: 100%;
-height: 30px;
-display: none;
-list-style-type: none;
-padding: 10px 0 0 0;
+  width: 200%;
+  height: 70px;
+  display: none;
+
+  list-style-type: none;
+  padding: 10px 0 0 0;
 }
 #secciones .secc:hover > .tiendas{
   display: block;
