--- a/web bien/BarnaJAP.css
+++ b/web bien/BarnaJAP.css
@@ -1,3 +1,4 @@
+@media screen and (min-width:769px) {
 body{
   background-color: pink;
   margin: 0;
@@ -5,33 +6,40 @@ body{
 
 #fondo{
   width: 100%;
-  height: 100%;
-  background-image: url(fondo.jpg);
+
+
   position: relative;
 
 }
 #idioma{
-  background-color: red;
-  width: 100%;
-  height: 80%;
 
-  position: relative;
+  width: 100%;
+  height: 10%;
+  bottom: 300px;
+  position: absolute;
 
 }
 #catala{
-height: 50px;
+height:50px;
 width: 20%;
-border: 3px white solid;
+background-color: white;
 display: inline-block;
 margin: 0 0 0 30%;
 text-align: center;
-font-size: 1em;
+padding: 20px 0 0 0;
+font-size: 1.5em;
 }
 #castellano{
 display: inline-block;
 height: 50px;
 margin: 0 0 0 0;
 width: 20%;
-border: 3px white solid;
+background-color: white;
+padding: 20px 0 0 0;
 text-align: center;
+font-size: 1.5em;
+}
+a{
+  text-decoration: none;
+}
 }
