--- a/web bien/BarnaJAP.css
+++ b/web bien/BarnaJAP.css
@@ -3,21 +3,16 @@ body{
   background-color: pink;
   margin: 0;
 }
-
 #fondo{
   width: 100%;
-
-
   position: relative;
-
+  background-image: url(foto/inicio.jpg);
 }
 #idioma{
-
   width: 100%;
   height: 10%;
   bottom: 300px;
   position: absolute;
-
 }
 #catala{
 height:50px;
