--- a/web bien/rutasbarnajap.css
+++ b/web bien/rutasbarnajap.css
@@ -8,6 +8,9 @@ body{
   position: relative;
   background-image: url(foto/inicio.jpg);
 }
+#fondo2{
+  display: none;
+}
 #idioma{
   width: 100%;
   height: 10%;
