--- a/web bien/rutasbarnajapmov.css
+++ b/web bien/rutasbarnajapmov.css
@@ -5,39 +5,41 @@ body{
   width: 100%;
 }
 #fondo{
-  position: relative;
+
 display: none;
+z-index: 1;
 }
 #fondo2{
   width: 100%;
 
-z-index: 1;
+z-index: 9;
 position: relative;
 
 }
 #idioma{
-z-index: 5;
-margin: -50px 0 0 0;
+z-index: 10;
+margin: -400px 0 0 0;
 width: 100%;
 background-color: red;
+position: absolute;
 }
 #catala{
-height:50px;
+height:30px;
 
 background-color: white;
 display: inline-block;
-margin: 0 0 0 20%;
+margin: 0 0 0 30%;
 text-align: center;
-padding: 20px 0 0 0;
+padding: 10px 0 0 0;
 font-size: 1em;
 }
 #castellano{
 display: inline-block;
-height: 50px;
+height: 30px;
 margin: 0 0 0 0;
 
 background-color: white;
-padding: 20px 0 0 0;
+padding: 10px 0 0 0;
 text-align: center;
 font-size: 1em;
 }
