--- a/web bien/nosotrosmov.css
+++ b/web bien/nosotrosmov.css
@@ -17,18 +17,18 @@
     width: 50%;
     height: 50px;
     margin: 0 0 0 50%;
-
+  text-align: center;
 
   }
   .ca{
-
     width: 55px;
-    float: left;
+    display: inline;
     text-align: center;
-    padding: 10% 6%;
+    background-color: white;
     font-size: 0.8rem;
     z-index: 10;
   }
+
   #secciones{
     display: none;
   }
