--- a/web bien/mapa_mov.css
+++ b/web bien/mapa_mov.css
@@ -15,27 +15,27 @@
   }
 
 
-#arriba  a{
+  #arriba  a{
   color: white;
-}
-a:active{
+  }
+  a:active{
   color: black pink;
-}
-#idioma{
-  width: 50%;
-  height: 50px;
-  margin: 0 0 0 50%;
-text-align: center;
-
-}
-.ca{
-  width: 55px;
-  display: inline;
+  }
+  #idioma{
+    width: 50%;
+    height: 50px;
+    margin: 0 0 0 50%;
   text-align: center;
-  background-color: white;
-  font-size: 0.8rem;
-  z-index: 10;
-}
+
+  }
+  .ca{
+    width: 55px;
+    display: inline;
+    text-align: center;
+    background-color: white;
+    font-size: 0.8rem;
+    z-index: 10;
+  }
   #secciones{
     display: none;
   }
@@ -104,11 +104,9 @@ text-align: center;
     z-index: 6;
   }
   #text{
-
     font-size: 1rem;
     line-height: 1.2rem;
     clear: both;
-    width: 100%;
 
   }
   #text1{
@@ -131,51 +129,8 @@ text-align: center;
 
     border-bottom: 5px rgb(207, 214, 212) solid;
   }
-
-  #madame{
-      height: 480px;
-      padding: 20px 0 0 0;
-      clear: both;
-      width: 100%;
-
-
-
-  }
-  #nunoya{
-    clear: both;
-    width: 100%;
-
-    height: 520px;
-    padding: 20px 0 0 0;
-
-  }
-  #norma{
-    clear: both;
-    width: 100%;
-
-    height: 700px;
-    padding: 20px 0 0 0;
-
-  }
-  #otonashi{
-    clear: both;
-    width: 100%;
-
-    height: 520px;
-    padding: 20px 0 0 0;
-
-  }
-
-  #haiku{
-    clear: both;
-    width: 100%;
-
-    height: 500px;
-    padding: 20px 0 0 0;
-
-  }
   .grande{
-  width: 95%;
+  width: 45%;
   height: 40%;
   margin: 0 2% 5% 2%;
   float: left;
@@ -192,7 +147,7 @@ text-align: center;
   height: 100px;
   background-color: black;
   position:absolute;
-  margin-top: 6070px;
+  margin-top: 270px;
   }
   #flecha{
     width: 15%;
@@ -227,7 +182,7 @@ text-align: center;
     text-decoration: none;
   }
   #nivel1-1{
-
+    background-color: red;
     width: 10%;
 
   }
@@ -241,10 +196,8 @@ text-align: center;
     z-index: 15;
     font-size: 0.8rem;
 
-
-
   }
-  #menu * { list-style:none; text-align: right;}
+  #menu * { list-style:none; }
   #menu li{ line-height:180%; }
   #menu li a{color:#222; }
   #menu li a:before{ content:"\025b8"; color:#ddd; display: none;}
@@ -256,4 +209,8 @@ text-align: center;
   #menu input:checked ~ label:before{ content:"\025be";}
   #menu .interior{display: none;}
   #menu input:checked ~ ul{display:block;}
+  #mapa{
+    width: 90%;
+    height: 300px;
+  }
 }
