--- a/web bien/ropayaccesorios.css
+++ b/web bien/ropayaccesorios.css
@@ -1,10 +1,19 @@
 @media screen and (min-width:769px) {
+  @font-face {
+  font-family: "Anja_Eliane";
+  src: url("fuentes/Anja_Eliane.ttf");
+}
+@font-face {
+font-family: "Antipasto-Pro-Regular-trial";
+src: url("fuentes/Antipasto-Pro-Regular-trial.ttf");
+}
 body{
   margin: 0 ;
   font-size: 18px;
 }
 p{
   text-align: left;
+  font-family: Antipasto-Pro-Regular-trial;
 }
 #arriba{
   width: 100%;
@@ -37,6 +46,9 @@ p{
   background-color: white;
   font-size: 1.4em;
 }
+#text3{
+  font-family: Anja_Eliane;
+}
 #text1{
 
 
@@ -62,6 +74,7 @@ p{
   text-align: center;
   padding: 30px 0 0 0;
   font-size: 1.6em;
+  font-family: Anja_Eliane;
 }
 #textos{
   width: 100%;
@@ -78,6 +91,7 @@ p{
   padding: 30px 0 0 0;
   margin: 10px 35% 0 35%;
   font-size: 2em;
+  font-family: Anja_Eliane;
 }
 #fondo{
   width: 100%;
