--- a/web bien/consum.css
+++ b/web bien/consum.css
@@ -1,4 +1,12 @@
 @media screen and (min-width:769px) {
+  @font-face {
+  font-family: "Anja_Eliane";
+  src: url("fuentes/Anja_Eliane.ttf");
+}
+@font-face {
+font-family: "Antipasto-Pro-Regular-trial";
+src: url("fuentes/Antipasto-Pro-Regular-trial.ttf");
+}
 body{
   margin: 0 ;
   font-size: 18px;
@@ -6,6 +14,7 @@ body{
 }
 p{
   text-align: left;
+  font-family: "Antipasto-Pro-Regular-trial";
 }
 #arriba{
   width: 100%;
@@ -13,6 +22,9 @@ p{
   clear: both;
   position: fixed;
   z-index: 10;
+}
+#text3{
+  font-family: "Anja_Eliane";
 }
 #idioma{
   width: 15%;
@@ -53,6 +65,7 @@ p{
   text-align: center;
   padding: 30px 0 0 0;
   font-size: 1.6em;
+    font-family: Anja_Eliane;
 }
 #textos{
   width: 100%;
@@ -64,6 +77,7 @@ p{
 #texto1{
   background-color: rgba(255, 255, 255, 0.76);
   height: 70px;
+    font-family: Anja_Eliane;
   width: 30%;
   text-align: center;
   padding: 30px 0 0 0;
