--- a/web bien/consum_mov.css
+++ b/web bien/consum_mov.css
@@ -1,4 +1,12 @@
 @media screen and (max-width:480px) {
+  @font-face {
+  font-family: "Anja_Eliane";
+  src: url("fuentes/Anja_Eliane.ttf");
+}
+@font-face {
+font-family: "Antipasto-Pro-Regular-trial";
+src: url("fuentes/Antipasto-Pro-Regular-trial.ttf");
+}
   body{
     margin: 0;
     padding: 0;
@@ -68,6 +76,7 @@ text-align: center;
     text-align: center;
     padding: 7px 0 0 0;
     font-size: 1em;
+      font-family: Anja_Eliane;
   }
   #textos{
     width: 100%;
@@ -75,10 +84,14 @@ text-align: center;
     position: absolute;
     margin-top: 20%;
   }
+  p{
+    font-family: Antipasto-Pro-Regular-trial;
+  }
   #texto1{
     background-color: rgba(255, 255, 255, 0.76);
     height: 40px;
     width: 70%;
+      font-family: Anja_Eliane;
     text-align: center;
     padding: 7px 0 0 0;
     margin: 10px 15% 0 15%;
@@ -127,7 +140,7 @@ text-align: center;
   #text3{
     height: 40px;
     clear: both;
-
+      font-family: "Anja_Eliane";
     border-bottom: 5px rgb(207, 214, 212) solid;
   }
   #madame{
