--- a/web bien/mapa.css
+++ b/web bien/mapa.css
@@ -1,4 +1,12 @@
 @media screen and (min-width:769px) {
+  @font-face {
+  font-family: "Anja_Eliane";
+  src: url("fuentes/Anja_Eliane.ttf");
+}
+@font-face {
+font-family: "Antipasto-Pro-Regular-trial";
+src: url("fuentes/Antipasto-Pro-Regular-trial.ttf");
+}
   body{
     margin: 0 ;
     font-size: 18px;
@@ -51,6 +59,7 @@
     text-align: center;
     padding: 30px 0 0 0;
     font-size: 2em;
+      font-family: Anja_Eliane;
   }
   #textos{
     width: 100%;
@@ -66,6 +75,7 @@
     text-align: center;
     padding: 5px 0 0 0;
     margin: 10px 35% 0 35%;
+      font-family: Anja_Eliane;
     font-size: 1.6em;
   }
   #fondo{
