--- a/web bien/mapa_mov.css
+++ b/web bien/mapa_mov.css
@@ -1,4 +1,15 @@
 @media screen and (max-width:480px) {
+  @font-face {
+  font-family: "Anja_Eliane";
+  src: url("fuentes/Anja_Eliane.ttf");
+}
+@font-face {
+font-family: "Antipasto-Pro-Regular-trial";
+src: url("fuentes/Antipasto-Pro-Regular-trial.ttf");
+}
+p{
+    font-family: Antipasto-Pro-Regular-trial;
+}
   body{
     margin: 0;
     padding: 0;
@@ -66,7 +77,8 @@
     margin: 5% 20% 0 20%;
     text-align: center;
     padding: 7px 0 0 0;
-    font-size: 1em;
+    font-size: 0.8em;
+    font-family: Anja_Eliane;
   }
   #textos{
     width: 100%;
@@ -81,7 +93,8 @@
     text-align: center;
     padding: 7px 0 0 0;
     margin: 10px 15% 0 15%;
-    font-size: 1em;
+    font-size: 0.8em;
+    font-family: Anja_Eliane;
   }
   #fondo{
     width: 100%;
