--- a/web bien/ropayaccesorios_mov.css
+++ b/web bien/ropayaccesorios_mov.css
@@ -1,4 +1,15 @@
 @media screen and (max-width:480px) {
+  @font-face {
+  font-family: "Anja_Eliane";
+  src: url("fuentes/Anja_Eliane.ttf");
+}
+@font-face {
+font-family: "Antipasto-Pro-Regular-trial";
+src: url("fuentes/Antipasto-Pro-Regular-trial.ttf");
+}
+p{
+  font-family: Antipasto-Pro-Regular-trial;
+}
   body{
     margin: 0;
     padding: 0;
@@ -72,7 +83,8 @@ text-align: center;
     margin: 5% 20% 0 20%;
     text-align: center;
     padding: 7px 0 0 0;
-    font-size: 1em;
+    font-size: 0.8em;
+    font-family: Anja_Eliane;
   }
   #textos{
     width: 100%;
@@ -87,7 +99,8 @@ text-align: center;
     text-align: center;
     padding: 7px 0 0 0;
     margin: 10px 15% 0 15%;
-    font-size: 1em;
+    font-size: 0.8em;
+    font-family: Anja_Eliane;
   }
   #fondo{
     width: 100%;
@@ -132,7 +145,7 @@ text-align: center;
   #text3{
     height: 40px;
     clear: both;
-
+font-family: Anja_Eliane;
     border-bottom: 5px rgb(207, 214, 212) solid;
   }
   #madame{
